# plot-light

./: .travis.yml  CHANGELOG.md  README.md  plot-light.cabal  stack.yaml
app/: Main.hs
app/heatmap/: Main.hs
app/scatter/: Main.hs
app/timeseries/: Main.hs
data/: heatmap-bw
plot-light-bitmap/: README.md  plot-light-bitmap.cabal  stack.yaml
plot-light-examples/: README.md  plot-light-examples.cabal  stack.yaml
plot-light-examples/app/heatmap/: Main.hs
plot-light-examples/app/histogram/: Main.hs
plot-light-examples/app/scatter/: Main.hs
plot-light-examples/app/timeseries/: Main.hs
plot-light-examples/data/: forex  forex_small
plot-light-examples/src/Data/: Parsers.hs
src/Data/: Parsers.hs  TimeSeries.hs
src/Data/Bifunctor/: Pair.hs
src/Data/TimeSeries/: Forex.hs
src/Graphics/Rendering/Plot/: Light.hs
src/Graphics/Rendering/Plot/Light/: Internal.hs  PlotTypes.hs
src/Graphics/Rendering/Plot/Light/IO/: Text.hs
src/Graphics/Rendering/Plot/Light/Internal/: Geometry.hs  Layout.hs  Types.hs  Utils.hs
src/Graphics/Rendering/Plot/Light/PlotTypes/: Heatmap.hs  Histogram.hs  Plot1D.hs  Scatter.hs  TimeSeries.hs
src/Graphics/Rendering/Plot/Light/PlotTypes/TimeSeries/: Candlestick.hs
test/: LibSpec.hs
