name:                plot-light
version:             0.1.0.0
synopsis:            A lightweight plotting library, exporting to SVG
-- description:
homepage:            https://github.com/ocramz/plot-light
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca marco gmail
copyright:           2017 Marco Zocca
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , blaze-svg

-- executable plot-light
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , plot-light

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , plot-light
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/plot-light
